syntax = "proto3";

package circle.v1;

import "google/protobuf/timestamp.proto";
import "proto/post/v1/post.proto";

option go_package = "github.com/yourorg/anonymous-support/gen/circle/v1;circlev1";

service CircleService {
  rpc CreateCircle(CreateCircleRequest) returns (CreateCircleResponse);
  rpc JoinCircle(JoinCircleRequest) returns (JoinCircleResponse);
  rpc LeaveCircle(LeaveCircleRequest) returns (LeaveCircleResponse);
  rpc GetCircleMembers(GetCircleMembersRequest) returns (GetCircleMembersResponse);
  rpc GetCircleFeed(GetCircleFeedRequest) returns (GetCircleFeedResponse);
  rpc GetCircles(GetCirclesRequest) returns (GetCirclesResponse);
}

message CreateCircleRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int32 max_members = 4;
  bool is_private = 5;
}

message CreateCircleResponse {
  string circle_id = 1;
}

message JoinCircleRequest {
  string circle_id = 1;
}

message JoinCircleResponse {
  bool success = 1;
}

message LeaveCircleRequest {
  string circle_id = 1;
}

message LeaveCircleResponse {
  bool success = 1;
}

message GetCircleMembersRequest {
  string circle_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message CircleMember {
  string user_id = 1;
  string username = 2;
  int32 avatar_id = 3;
  google.protobuf.Timestamp joined_at = 4;
  string role = 5;
}

message GetCircleMembersResponse {
  repeated CircleMember members = 1;
  int32 total_count = 2;
}

message GetCircleFeedRequest {
  string circle_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetCircleFeedResponse {
  repeated post.v1.Post posts = 1;
  int32 total_count = 2;
}

message GetCirclesRequest {
  optional string category = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message Circle {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  int32 max_members = 5;
  int32 member_count = 6;
  bool is_private = 7;
  google.protobuf.Timestamp created_at = 8;
}

message GetCirclesResponse {
  repeated Circle circles = 1;
  int32 total_count = 2;
}
